--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -2,7 +2,7 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 100;
+    z-index: 1000;
     width: 100%;
     background-color: rgba($color-black-1, .6);
     // background-color: rgba($color-secondary-light, .6);
